<resources>
    <string name="app_name">PurrTodo</string>
    <string name="todo">To do</string>
    <string name="in_progress">In progress</string>
    <string name="task_detail">Task Detail</string>
    <string name="description">Description</string>
    <string name="project">Project</string>
    <string name="deadline">Deadline</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="see_all">See all</string>
    <string name="good_morning">Good morning</string>
    <string name="good_evening">Good evening</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="add_task">Add task</string>
    <string name="edit_task">Edit task</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="friend">Friend</string>
    <string name="empty_task">0</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="project_icon">Project Icon</string>
    <string name="deadline_icon">Deadline icon</string>

    <!--Form validations-->
    <string name="field_empty">The %1$s can\'t be empty</string>
    <!--Actions results-->
    <string name="successful_task">The task was created successfully</string>
    <string name="updated_successful_task">The task was updated successfully</string>
    <string name="failed_task">We couldn\'t %1$ the task, please try again</string>
    <string name="successful_done_task">Congratulations on finishing the task</string>
    <!--Confirmation Dialogs-->
    <string name="delete_title">Delete task</string>
    <string name="delete_message">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="app_version">Purr Todo v. %1$s </string>
    <string name="preferences_save">The preferences were saved</string>
    <string name="photos_permission_not_granted">"We can't change the profile picture if you don't grant the permission :(</string>
    <string name="failed_open_gallery">"We couldn't open the gallery, please try again"</string>

</resources>